--- a/Makefile.in
+++ b/Makefile.in
@@ -1,24 +1,37 @@
-# Environment 
-MKDIR=mkdir
-CP=cp
-RANLIB=ranlib
-CC=gcc
-CXX=g++
-AS=as
+SHELL = /bin/sh
+VPATH = @srcdir@
 
-SRC_DIR=src
-INCLUDE_DIR=include
-LIB_DIR=lib
-BUILD_DIR=build
+subdirs = @subdirs@
+top_srcdir = @top_srcdir@
+srcdir = @srcdir@/src
+includedir = @srcdir@/include
+builddir = @srcdir@/build
+prelibdir = @srcdir@/lib
+prefix = @prefix@
+exec_prefix = @exec_prefix@
+infodir = $(prefix)/info
+libdir = $(prefix)/lib/kompex
+mandir = $(prefix)/man/man1
+headerdir = $(prefix)/include
 
-PLATFORM=GNU-Linux
+CC = @CC@
+CFLAGS = @CFLAGS@
+CPPFLAGS = $(CFLAGS) @CPPFLAGS@
+LDFLAGS = @LDFLAGS@
+LIBS = @LIBS@
+INSTALL = @INSTALL@
+MKDIR = mkdir
+RANLIB = ranlib
+
 PRODUCT_NAME=kompex-sqlite-wrapper
 
 all: static shared
 
 clean:
-	${RM} -rf build/
-	${RM} -rf ${LIB_DIR}/
+	$(RM) -r ${builddir}
+	$(RM) -r ${prelibdir}
+	$(RM) config.{h,log,status}
+	$(RM) Makefile
 
 static:
 	$(MAKE) -f Makefile-static.mk CONF=static .build-conf
