Changed arch in PKGBUILD

--- a/package/PKGBUILD
+++ b/package/PKGBUILD
@@ -3,7 +3,7 @@ pkgname=kompex-sqlite-wrapper-git
 pkgver=1.8.10
 pkgrel=1
 pkgdesc="An open source C++ wrapper library for SQLite"
-arch=(any)
+arch=('x86_64' 'i686')
 url="http://sqlitewrapper.kompex-online.com/"
 license=('LGPL')
 groups=()
