Changed PKGBUILD license to LGPL3

--- a/package/PKGBUILD
+++ b/package/PKGBUILD
@@ -5,7 +5,7 @@ pkgrel=1
 pkgdesc="An open source C++ wrapper library for SQLite"
 arch=('x86_64' 'i686')
 url="http://sqlitewrapper.kompex-online.com/"
-license=('LGPL')
+license=('LGPL3')
 groups=()
 depends=()
 makedepends=('git')
