Added gcc-libs dependency

--- a/package/PKGBUILD
+++ b/package/PKGBUILD
@@ -7,7 +7,7 @@ arch=('x86_64' 'i686')
 url="http://sqlitewrapper.kompex-online.com/"
 license=('LGPL3')
 groups=()
-depends=()
+depends=('gcc-libs')
 makedepends=('git')
 provides=()
 conflicts=()
