Makefile: use autoconf CXX for proper builds
Signed-off-by: Gustavo Zacarias <gustavo@zacarias.com.ar>

--- a/Makefile.in
+++ b/Makefile.in
@@ -23,6 +23,7 @@ mandir = $(prefix)/share/man/man3
 headerdir = $(prefix)/include/kompex
 
 CC = @CC@
+CXX = @CXX@
 CFLAGS = @CFLAGS@
 CPPFLAGS = $(CFLAGS) @CPPFLAGS@
 LDFLAGS = @LDFLAGS@
